syntax = "proto3";

import "common.proto";

package api;

message ListCfRoutesRequest {}

message ListCfRoutesResponse {
  // key is route guid
  // value is host
  map<string, string> routes = 1;
}

message ListCapiDiegoProcessAssociationsRequest {}

// this is only for ListCapiDiegoProcessAssociationsResponse,
// since protobuf does not support list values in maps.
// it's gross. try not to use it.
message DiegoProcessGuids {
  repeated string diego_process_guids = 1;
}
message ListCapiDiegoProcessAssociationsResponse {
  // key is capi process guid
  // value is a list of diego process guids
  map<string, DiegoProcessGuids> capi_diego_process_associations = 1;
}

message Route {
  string guid = 1;
  string host = 2;
  string path = 3;
  repeated Destination destinations = 4;
}

message UpsertRouteRequest {
  Route route = 1;
}

message UpsertRouteResponse {}

message DeleteRouteRequest {
  string guid = 1;
}

message DeleteRouteResponse {}

message Destination {
  string capi_process_guid = 1;
  uint32 weight = 2;
  uint32 port = 3;
}

message CapiDiegoProcessAssociation {
  string capi_process_guid = 1;
  repeated string diego_process_guids = 2;
}

message UpsertCapiDiegoProcessAssociationRequest {
  CapiDiegoProcessAssociation capi_diego_process_association = 1;
}

message UpsertCapiDiegoProcessAssociationResponse {}

message DeleteCapiDiegoProcessAssociationRequest {
  string capi_process_guid = 1;
}

message DeleteCapiDiegoProcessAssociationResponse {}

message BulkSyncRequest {
  repeated Route routes = 1;
  repeated CapiDiegoProcessAssociation capi_diego_process_associations = 2;
}

message BulkSyncResponse {}

service CloudControllerCopilot {
  rpc ListCfRoutes(ListCfRoutesRequest) returns (ListCfRoutesResponse) {}
  rpc ListCapiDiegoProcessAssociations(ListCapiDiegoProcessAssociationsRequest) returns (ListCapiDiegoProcessAssociationsResponse) {}

  rpc UpsertRoute(UpsertRouteRequest) returns (UpsertRouteResponse) {}
  rpc DeleteRoute (DeleteRouteRequest) returns (DeleteRouteResponse) {}

  rpc UpsertCapiDiegoProcessAssociation(UpsertCapiDiegoProcessAssociationRequest) returns (UpsertCapiDiegoProcessAssociationResponse) {}
  rpc DeleteCapiDiegoProcessAssociation(DeleteCapiDiegoProcessAssociationRequest) returns (DeleteCapiDiegoProcessAssociationResponse) {}
  rpc BulkSync (BulkSyncRequest) returns (BulkSyncResponse) {}

  rpc Health(HealthRequest) returns (HealthResponse) {}
}
